fix spacing around box

--- a/src/components/Quiz/Score/style.scss
+++ b/src/components/Quiz/Score/style.scss
@@ -1,7 +1,7 @@
 #score {
   text-align: center;
-  height: 600px;
-  width: 600px;
+  height: 500px;
+  width: 500px;
   padding: 2em;
   background-color: #7C9885;
   background-image: url("https://www.transparenttextures.com/patterns/inspiration-geometry.png");
@@ -10,7 +10,6 @@
   color: #033F63;
 
   h1 {
-    padding-top: 1em;
     font-size: 4.5em;
   }
   h2 {
